--- a/languages/lazaruside.fi.po
+++ b/languages/lazaruside.fi.po
@@ -1279,7 +1279,7 @@ msgid "Color"
 msgstr "Väri"
 
 #: lazarusidestrconsts:dlgclrscheme
-msgid "Color Scheme:"
+msgid "Color Scheme"
 msgstr ""
 
 #: lazarusidestrconsts:dlgenvcolors
@@ -2230,8 +2230,8 @@ msgstr ""
 msgid "ElseIf"
 msgstr ""
 
-#: lazarusidestrconsts:lisenablemakros
-msgid "Enable Makros"
+#: lazarusidestrconsts:lisenablemacros
+msgid "Enable Macros"
 msgstr ""
 
 #: lazarusidestrconsts:lisenabled
@@ -2571,8 +2571,8 @@ msgid "File already in package"
 msgstr ""
 
 #: lazarusidestrconsts:dlgfileexts
-msgid "File extensions:"
-msgstr "Tiedostopäätteet:"
+msgid "File extensions"
+msgstr ""
 
 #: lazarusidestrconsts:lispkgmangfileisalreadyinpackage
 msgid "File is already in package"
@@ -3062,28 +3062,8 @@ msgstr "Korkeus:"
 msgid "Help"
 msgstr "Ohje"
 
-#: lazarusidestrconsts:lishelpcontextnotfound
-msgid "Help Context not found"
-msgstr ""
-
-#: lazarusidestrconsts:lishelpdatabasenotfound
-msgid "Help Database not found"
-msgstr ""
-
 #: lazarusidestrconsts:lishlpoptshelpoptions
 msgid "Help Options"
-msgstr ""
-
-#: lazarusidestrconsts:lishelpselectorerror
-msgid "Help Selector Error"
-msgstr ""
-
-#: lazarusidestrconsts:lishelpviewererror
-msgid "Help Viewer Error"
-msgstr ""
-
-#: lazarusidestrconsts:lishelpviewernotfound
-msgid "Help Viewer not found"
 msgstr ""
 
 #: lazarusidestrconsts:lishfmhelpforfreepascalcompilermessage
@@ -3092,10 +3072,6 @@ msgstr ""
 
 #: lazarusidestrconsts:srkmcarhelpmenu
 msgid "Help menu commands"
-msgstr ""
-
-#: lazarusidestrconsts:lishelpnotfound
-msgid "Help not found"
 msgstr ""
 
 #: lazarusidestrconsts:lishelpselectordialog
@@ -3924,10 +3900,6 @@ msgstr "Kieli"
 
 #: lazarusidestrconsts:lisdebugoptionsfrmlanguageexceptions
 msgid "Language Exceptions"
-msgstr ""
-
-#: lazarusidestrconsts:dlglang
-msgid "Language:"
 msgstr ""
 
 #: lazarusidestrconsts:dlgcdtlast
@@ -5374,8 +5346,8 @@ msgstr "Tunnistettiin 'Project Info'-tiedostoksi"
 msgid "Project is runnable"
 msgstr ""
 
-#: lazarusidestrconsts:lisprojectmakroproperties
-msgid "Project makro properties"
+#: lazarusidestrconsts:lisprojectmacroproperties
+msgid "Project macro properties"
 msgstr ""
 
 #: lazarusidestrconsts:srkmcatprojectmenu
@@ -8082,10 +8054,6 @@ msgstr "Käännösyksiköt eli unitit ..."
 msgid "Unknown"
 msgstr "Tuntematon"
 
-#: lazarusidestrconsts:lisunknownerrorpleasereportthisbug
-msgid "Unknown Error, please report this bug"
-msgstr ""
-
 #: lazarusidestrconsts:lispkgmangunsavedpackage
 msgid "Unsaved package"
 msgstr ""
@@ -8618,8 +8586,8 @@ msgstr ""
 msgid "lowercase"
 msgstr "Pienet kirjaimet"
 
-#: lazarusidestrconsts:lisprojectmakrounitpath
-msgid "makro ProjectUnitPath"
+#: lazarusidestrconsts:lisprojectmacrounitpath
+msgid "macro ProjectUnitPath"
 msgstr ""
 
 #: lazarusidestrconsts:lisoipmissing
